Migrate from tds to typings.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
     - "5"
 
 install:
-    - "npm install typescript tsd"
-    - "tsd install"
+    - "npm install typescript typings"
+    - "typings install"
 
 script:
     - "tsc @tsxunit-launch-builder.config"
