--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ install:
     - "npm install typescript typings"
     - "typings install"
 
+before_script:
+    - "npm run build"
 script:
     - "npm test"
