--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "repository": "https://gitlab.com/FreeElephants/TSxUnit",
   "description": "xUnit for TypeScript projects",
   "scripts": {
+    "tsc": "tsc",
+    "typings": "typings",
+
+    "postinstall": "typings install",
+
     "build": "tsc @tsxunit-build.config",
+
     "pretest": "tsc @tsxunit-launch-builder.config && node bin/launch-builder.js tests/ && tsc",
     "test": "node out.js"
   },
