--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "ts-x-unit",
-  "version": "0.0.1",
-  "repository": "https://gitlab.com/FreeElephants/TSxUnit",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:FreeElephants/TSxUnit.git"
+  },
   "description": "xUnit for TypeScript projects",
+  "keywords": [
+    "xUnit",
+    "ts",
+    "typescript"
+  ],
+  "author": "samizdam",
+  "license": "BSD-2-Clause",
   "scripts": {
     "tsc": "tsc",
     "typings": "typings",
-
-    "postinstall": "typings install",
 
     "build": "tsc @tsxunit-build.config",
     "pretest": "tsc @tsxunit-launch-builder.config && node bin/launch-builder.js tests/ && tsc",
@@ -17,13 +24,6 @@
   "typescript": {
     "definition": "build/index.d.ts"
   },
-  "keywords": [
-    "xUnit",
-    "ts",
-    "typescript"
-  ],
-  "author": "samizdam",
-  "license": "BSD-2-Clause",
   "dependencies": {
     "typescript": "^1.8.9",
     "typings": "^0.7.9"
