--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,12 @@
+src
+tests
+.travis.yml
+tsconfig.json
+*.config
+typings.json
+.npmignore
+
+# .gitignore content:
 # IDE
 .idea
 
@@ -8,10 +17,7 @@ typings
 # compiled output
 out.js
 out.js.map
-tests/LaunchMap.ts
-bin
-index.js
-index.d.ts
 
 # logs
 npm-debug.log
+
