--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "definition": "build/index.d.ts"
   },
   "dependencies": {
-    "typescript": "^1.8.9",
-    "typings": "^0.7.9"
+    "typescript": "1.8.9",
+    "typings": "0.7.9"
   }
 }
