--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
   "exclude": [
     "node_modules",
     "bin",
-    "build",
+    "index.js",
+    "index.d.ts",
     "src/launch-builder.ts",
     "typings/browser.d.ts",
     "typings/browser"
