Add shebang in launch builder.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "typings": "typings",
 
     "build": "tsc @tsxunit-build.config",
-    "pretest": "tsc @tsxunit-launch-builder.config && node bin/launch-builder.js tests/ && tsc",
+
+    "build-launch-builder": "tsc @tsxunit-launch-builder.config && echo #! /usr/bin/env node | cat - bin/launch-builder.js > temp && mv temp bin/launch-builder.js",
+
+    "pretest": "npm run build-launch-builder && node bin/launch-builder.js tests/ && tsc",
     "test": "node out.js"
   },
   "bin": {
