--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 
     "pretest": "npm run build-launch-builder && node bin/launch-builder.js tests/ && tsc",
     "test": "node test.js",
-    "posttest": "istanbul cover test.js && remap-istanbul --input coverage/coverage.json --output coverage/html-report --type html"
+
+    "coverage": "istanbul cover test.js && remap-istanbul --input coverage/coverage.json --output coverage/html-report --type html"
   },
   "bin": {
     "launch-builder": "bin/launch-builder"
