--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "module": "amd",
     "target": "es3",
     "out": "test.js",
-    "sourceMap": true
-
+    "sourceMap": true,
+    "removeComments": true
   },
   "exclude": [
     "node_modules",
