--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -3,6 +3,6 @@
     "module": "amd",
     "rootDir": "../src",
     "moduleResolution": "node",
-    "out": "tests/test.js"
+    "out": "tests/tests.js"
   }
 }
