require jsmockito and begin use mock builder: wrapper under jsmockito.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "istanbul": "^0.4.2",
+    "jsmockito": "^1.0.5",
     "remap-istanbul": "^0.5.1",
     "typescript": "1.8.9",
     "typings": "0.7.9"
