--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@types/log4js": "0.0.32",
-    "@types/node": "*",
+    "@types/node": "^6.0",
     "jsdom": "^9.4.5",
     "jsmockito": "^1.0.5",
     "log4js": "0.6.*",
