--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepublish": "tsc bin/suite-builder.ts",
     "istanbul": "istanbul",
     "remap-istanbul": "remap-istanbul",
-    "coverage": "rm -rf coverage/* && istanbul cover tests/suite.js && remap-istanbul --input coverage/coverage.json --output coverage/html-report --type html && remap-istanbul --input coverage/coverage.json --output coverage/coverage-final.json"
+    "coverage": "npm run pretest && rm -rf coverage/* && istanbul cover tests/suite.js && remap-istanbul --input coverage/coverage.json --output coverage/html-report --type html && remap-istanbul --input coverage/coverage.json --output coverage/coverage-final.json"
   },
   "bin": {
     "suite-builder": "bin/suite-builder"
